patika.dev profili eklendi

--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
         <strong>Can Dostum:</strong> Basrolde Omar Sy´nin oldugu bu filmde engelli zengin bir fransiz is adami ile hayatinin nereye sürüklendigi belli olmayan Philippe´nin, Philippe bakici olarak ise alindiktan sonraki olusan dostluklarini konu almaktadir.
     </p>
 
+    <a href="https://app.patika.dev/gurayyalmaz">Patika.dev profilim</a>
+
 </body>
 </html>
